# Mastermind-Minigame

./: .gitignore  CMakeLists.txt  README.md
Mastermind/: CMakeLists.txt
Mastermind/src/: main.cpp
Mastermind/src/game/: checks.cpp  game.cpp  game.h
Mastermind/src/text/: text.cpp  text.h
Mastermind/src/ui/: controls_unix.cpp  controls_win.cpp
include/: game.h
src/: main.cpp
src/game/: game.cpp
src/text/: text.cpp
src/ui/: controls.cpp
